objects/ssot__LoyaltyTierBenefit__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Tier Benefit Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyBenefitId__c</fullName>
        <label>Loyalty Benefit</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyTierId__c</fullName>
        <label>Loyalty Tier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761179260_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyBenefit_Id_map_LoyaltyTierBen_rel</label>
        <referenceTo>ssot__LoyaltyBenefit__dlm</referenceTo>
        <relationshipLabel>LoyaltyBenefit_Id_map_LoyaltyTierBen_rel</relationshipLabel>
        <relationshipName>rel_1697761179260_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761184696_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyTierBenefit_LoyaltyBenefitId__rel</label>
        <referenceTo>ssot__LoyaltyBenefit__dlm</referenceTo>
        <relationshipLabel>LoyaltyTierBenefit_LoyaltyBenefitId__rel</relationshipLabel>
        <relationshipName>rel_1697761184696_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761184762_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyTierBenefit_LoyaltyTierId_map_rel</label>
        <referenceTo>ssot__LoyaltyTier__dlm</referenceTo>
        <relationshipLabel>LoyaltyTierBenefit_LoyaltyTierId_map_rel</relationshipLabel>
        <relationshipName>rel_1697761184762_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>